--- a/src/Components/Style/Todo.css
+++ b/src/Components/Style/Todo.css
@@ -1,13 +1,36 @@
 .todo {
     background-color: red;
-    margin: 5px 0;
     border-radius: 10px;
+    min-width: 40%;
+    max-width: 45%;
 }
 
 .todo-content {
     max-height: 300px;
-    min-height: 150px;
-    overflow-y: auto;
+    min-height: 80px;
+    overflow-y: auto;    
+}
+
+.todo-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.todo-heading {
+    display: flex;
+    flex-direction: row;
+}
+
+.todo-index {
+    float: left;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.todo-title {
+    font-weight: bold;
+    font-size: 1.8em;
 }
 
 .clicked {
@@ -16,4 +39,15 @@
 
 .active-clicked {
     display: active;
+}
+
+.delete-btn, .todo-btn {
+    margin: 10px;
+    padding: 8px 15px;
+}
+
+.todo-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
