--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,18 @@ body, html {
 li {
   list-style: none;
 }
+
+/*colors
+
+#e24d2f -light red
+#D31F00 - dark red
+
+#97CE48 - lime green
+#6ca515 - dark green
+
+#d6d66f - pale yellow
+#A8A832 - dark pale yellow
+
+#4FC72F - green
+#378F00 - dark green
+*/
