--- a/src/Components/Style/Footer.css
+++ b/src/Components/Style/Footer.css
@@ -1,6 +1,7 @@
 .footer {
-    background-color: orange;
+    background-color: #97CE48;
     padding: 20px;
     margin: 0;
     text-align: center;
+    color: #378F00;
 }
