--- a/src/Components/Style/Header.css
+++ b/src/Components/Style/Header.css
@@ -1,5 +1,6 @@
 .header {
-    background-color: yellow;
+    background-color: #97CE48;
+    color: #D31F00;
     padding: 20px;
     margin: 0;
 }
