--- a/src/Components/Style/Todos.css
+++ b/src/Components/Style/Todos.css
@@ -6,3 +6,70 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.todo {
+    background-color: #d6d66f;
+    border: 4px solid #A8A832;
+    border-radius: 10px;
+    max-width: 45%;
+    min-width: 40%;
+}
+
+.todo-content {
+    max-height: 300px;
+    min-height: 80px;
+    overflow-y: auto;    
+}
+
+.todo-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.todo-heading {
+    display: flex;
+    flex-direction: row;
+}
+
+.todo-index {
+    float: left;
+    padding: 10px;
+    font-weight: bold;
+}
+
+.todo-title {
+    font-weight: bold;
+    font-size: 1.8em;
+    text-transform: capitalize;
+}
+
+.todo-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+} 
+
+.clicked {
+    display: none;
+}
+
+.active-clicked {
+    display: active;
+}
+
+.delete-btn, .todo-btn {
+    margin: 10px;
+    padding: 8px 15px;
+    border-radius: 3px;
+}
+
+.todo-btn {
+    background-color: #97CE48;
+    border: 2px solid #6ca515;
+}
+
+.delete-btn {
+    background-color: #e24d2f;
+    border: 2px solid #D31F00;
+}
